GSASL_AUTHID when discovering the authorization identity.  If you
don't want any authorization identity (and thus let the server fall
back on the identity implied from the Kerberos layer) then return
GSASL_NO_CALLBACK on both.  Please update code to use GSASL_AUTHZID
instead of GSASL_AUTHID, in case we remove the backwards compatibility
code.  Reported by Amon Ott.

** i18n: Updated translations.

** API and ABI modifications.
No changes since last version.

* Version 1.8.0 (released 2012-05-28) [stable]

** This is a new major stable release.  Brief changes compared to 1.6.x:

*** SAML20 support following RFC 6595.

*** OPENID20 support following RFC 6616.

*** Various cleanups, portability and other bug fixes.
See the NEWS entries during the 1.7.x branch for details.

** API and ABI modifications.
No changes since last version.

* Version 1.7.6 (released 2012-05-23) [beta]

** i18n: Updated translations.

** API and ABI modifications.
No changes since last version.

* Version 1.7.5 (released 2012-05-22) [beta]

** i18n: Updated translations.

** Build fixes.

** API and ABI modifications.
No changes since last version.

* Version 1.7.4 (released 2012-05-16) [alpha]

** libgsasl: Reverted unification of OpenID and SAML properties/callbacks.
The reason was that client and servers needs to know whether it is
SAML or OpenID that is used, and using the same property and callback
symbol for both makes this more difficult.

** i18n: Updated translations.

** GSS-API server: Don't output zero-length tokens on context init success.
Reported by Andreas Oberritter <obi@saftware.de>.

** GSS-API server: Only proceed to next step when context is established.
Reported by Andreas Oberritter <obi@saftware.de>.

** Rewrote DIGEST-MD5 code to avoid false positive complaint from valgrind.

** Update gnulib files.

** API and ABI modifications.
GSASL_REDIRECT_URL: Removed.
GSASL_OPENID20_REDIRECT_URL: Added.
GSASL_SAML20_REDIRECT_URL: Added.
GSASL_AUTHENTICATE_IN_BROWSER: Removed.