@@ -472,15 +472,15 @@ extern "C"
   extern GSASL_API int gsasl_nonce (char *data, size_t datalen);
   extern GSASL_API int gsasl_random (char *data, size_t datalen);
   extern GSASL_API int gsasl_md5 (const char *in, size_t inlen,
-				  char *out[16]);
+				  char *out[]);
   extern GSASL_API int gsasl_hmac_md5 (const char *key, size_t keylen,
 				       const char *in, size_t inlen,
-				       char *outhash[16]);
+				       char *outhash[]);
   extern GSASL_API int gsasl_sha1 (const char *in, size_t inlen,
-				   char *out[20]);
+				   char *out[]);
   extern GSASL_API int gsasl_hmac_sha1 (const char *key, size_t keylen,
 					const char *in, size_t inlen,
-					char *outhash[20]);
+					char *outhash[]);
   extern GSASL_API void gsasl_free (void *ptr);
 
   /* Get the mechanism API. */
